--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -19,7 +19,7 @@
 \newacronym{sbc}{SBC}{Single Board Computer}
 \newacronym{gpio}{GPIO}{General Purpose Input/Output}
 \newacronym{uart}{UART}{Universal Asynchronous Receiver / Transmitter}
-
-
+\newacronym{lut}{LUT}{Lookup Table}
+\newacronym{cdc}{CDC}{Communication Device Class}
 
 
