--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -162,7 +162,7 @@ functions\ref{lst:CustomSensorClass} need to be implemented.
 #ifndef __CustomSensor_h__
 #define __CustomSensor_h__
 // register your custom sensor in implemented_sensors.h also
-class CustomSensor: public baseSensor {}
+class CustomSensor: public baseSensor
 {
 public:
     CustomSensor();
@@ -210,6 +210,11 @@ memory space and facilitates seamless processing of real-time data. Ring
 buffers are well suited for applications with variable data rates and
 minimise the need for complex memory management. The buffer can be read
 out by command and the result of the measurement is sent to the host.
+Each sensor measurement result is transmitted from the buffer to the
+host together with a time stamp and a sequential number. This ensures
+that in a multi-sensor setup with several sensors. The measurements are
+synchronized\ref{sensor-syncronsisation-interface} in time and are not
+out of sequence or drift.
 
 \hypertarget{sensor-syncronsisation-interface}{%
 \subsection{Sensor syncronsisation
