--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -21,5 +21,6 @@
 \newacronym{uart}{UART}{Universal Asynchronous Receiver / Transmitter}
 \newacronym{lut}{LUT}{Lookup Table}
 \newacronym{cdc}{CDC}{Communication Device Class}
+\newacronym{cad}{CAD}{Computer Aided Design}
 
 
