--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -40,27 +40,45 @@
 \hypertarget{unified-sensor}{%
 \chapter{Unified Sensor}\label{unified-sensor}}
 
-\begin{itemize}
-\tightlist
-\item
-  ziel ist es einen low cost hallsensor-interface zu entwickeln welcher
-  möglichst
-\item
-  universell
-\item
-  verschienee sensoren abbilden kann
-\item
-  mit verschienden magneten typen und formen nutzbar
-\item
-  reproduzierbar
-\item
-  1d, 2d, 3d
-\item
-  integration
-\end{itemize}
+The main aim of this project is to develop a low-cost Hall sensor
+interface that is also universally expandable. The focus is on mapping
+different sensors and being compatible with different magnet types and
+shapes. This ensures broad applicability in different scenarios. Another
+goal is reproducibility to ensure consistent results. Easy communication
+with standard PC hardware maximises the user-friendliness of the
+interface. The flexibility to support different sensors and magnets
+makes the system versatile and opens up possibilities for different
+applications. This low-cost Hall sensor interface will therefore not
+only be economically attractive, but also facilitate the integration of
+Hall sensors in different contexts. In addition, the low-cost Hall
+sensor interface will serve as a development platform for the data
+evaluation \gls{mrp} library and provide real measurement data from
+magnets. In addition, the interface firmware creates a basis for the
+development of a data protocol for exchanging measured values. This
+makes it easy to integrate your own measuring devices into the \gls{mrp}
+ecosystem at a later date. This is only possible with a minimal
+functional hardware and firmware setup and was developed for this
+purpose first.
 
 \hypertarget{sensor-selection}{%
 \section{Sensor selection}\label{sensor-selection}}
+
+The selection process for possible magnetic field sensors initially
+focussed on the most common and cost-effective ones, especially those
+that are already used in smartphones and are therefore widely available.
+A key aspect of this selection was the preference for sensors with
+digital interfaces to facilitate implementation in the circuit layout.
+The integration of integrated temperature sensors represents a
+significant enhancement that will later enable precise temperature
+compensation.
+
+Linear analogue Hall sensors were deliberately omitted, although they
+are suitable for more precise measurements and extended measuring
+ranges. They were excluded due to the more complex circuit layouts
+required and more complex power management. In the context of the
+desired goal of developing a cost-efficient and universally expandable
+Hall sensor interface, the decision in favour of digital sensors seems
+appropriate.
 
 \begin{longtable}[]{@{}lllll@{}}
 \caption{Implemented digital halleffect sensors
@@ -81,38 +99,48 @@ Interface & \gls{i2c} & \gls{i2c} & \gls{i2c} & \gls{i2c}\tabularnewline
 \bottomrule
 \end{longtable}
 
-\begin{itemize}
-\tightlist
-\item
-  for higher ranges analog sensoren nutzen welche jedoch eine
-  aufwändigere schaltung erfodern
-\item
-  datenblatte links ergänzen
-\item
-  alle i2c in der regel, welches eine einfache integration ermöglicht
-\item
-  eingebauter temperatursensor ermöglicht temperaturkompensation
-\item
-  conrad teslameter mit seperaten temperatursensor
-\end{itemize}
+Focussing on digital interfaces not only facilitates implementation, but
+also contributes to overall cost efficiency. At the same time, the
+integration of temperature sensors enables precise measurements under
+varying environmental conditions. This strategic choice forms the basis
+for a flexible, universally applicable Hall sensor interface that can be
+seamlessly integrated into various existing systems.
+
+The table\ref{Implemented_digital_halleffect_sensors.csv} shows a
+selection of sensors for which hardware and software support has been
+implemented. The resolution of the selected sensors covers the expected
+range of values required by the various magnets to be tested.
 
 \hypertarget{mechanical-structure}{%
 \section{Mechanical Structure}\label{mechanical-structure}}
 
-\begin{itemize}
-\tightlist
-\item
-  3d druck toleranztest
-\item
-  magnet halterung mit kraftloser arretierung
-\item
-  motoren und andere unter umstaänden magnetische teile in der nähe des
-  sensors
-\item
-  nylon schrauben, 3d druck, 3d gedruckte klemmverbindungen
-\item
-  später rausrechnen durch kalibierung
-\end{itemize}
+\begin{figure}
+\centering
+\includegraphics{./generated_images/border_1D_sensor_mechanical_3D_printed_structure.png}
+\caption{1D sensor mechanical 3D printed structure
+\label{1D_sensor_mechanical_3D_printed_structure.png}}
+\end{figure}
+
+The mechanical structure of a sensor is kept very simple for the
+following tests. The focus was on providing a stable foundation for the
+sensor \gls{ic} and an exchangeable holder for different magnets.
+
+The following figure\ref{1D_sensor_mechanical_3D_printed_structure.png},
+shows a sectional view of the \gls{cad} drawing of the
+\passthrough{\lstinline!1D: Single sensor!}\ref{d-single-sensor}.
+
+All parts were produced using the 3D printing process. The sensor
+circuit board was glued underneath the magnet holder. This is
+interchangeable, so different distances between sensor and magnet can be
+realised.
+
+The exchangeable magnetic holder (shown in green) can be adapted to
+different magnets. It can be produced quickly due to the small amount of
+material used. The two recesses lock the holder with the inserted magnet
+over the sensor. Due to predetermined tolerances, the magnet can be
+inserted into the holder with repeat accuracy and without play. This is
+important if several magnets have to be measured, where the positioning
+over the sensor must always be the same.
 
 \hypertarget{electrical-interface}{%
 \section{Electrical Interface}\label{electrical-interface}}
@@ -202,7 +230,7 @@ synchronisation\ref{sensor-syncronsisation-interface} is set up. The
 last step in the setup is to set up communication with the host or
 connected \gls{pc}. All microcontroller platforms used here have a
 \gls{usb} slave port. The used usb descriptor is
-\passthrough{\lstinline!Serial over (+usb)!}- ((+usb)\gls{cdc}). This is
+\passthrough{\lstinline!Serial over (+usb)!}-((+usb)\gls{cdc}). This is
 used to emulate a virtual RS232 communication port using a USB port on a
 \gls{pc} and usually no additional driver is needed on modern systems.
 
@@ -286,6 +314,136 @@ device drivers, data transfer speed and system resources. High-quality
 \gls{usb} devices and modern drivers often minimise latencies.
 Nevertheless, complex data processing tasks and overloaded \gls{usb}
 ports can lead to delays.
+
+\begin{longtable}[]{@{}llllll@{}}
+\caption{Measured sensor readout to processing using host software
+\label{Measured_sensor_readout_to_processing_using_host_software.csv}}\tabularnewline
+\toprule
+\begin{minipage}[b]{0.02\columnwidth}\raggedright
+Run\strut
+\end{minipage} & \begin{minipage}[b]{0.06\columnwidth}\raggedright
+Datapoints\strut
+\end{minipage} & \begin{minipage}[b]{0.15\columnwidth}\raggedright
+Host software runtime {[}ms{]}\strut
+\end{minipage} & \begin{minipage}[b]{0.29\columnwidth}\raggedright
+Average Sensor communication time per reading {[}ms{]}\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Communication jitter time {[}ms{]}\strut
+\end{minipage} & \begin{minipage}[b]{0.14\columnwidth}\raggedright
+Comment\strut
+\end{minipage}\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+\begin{minipage}[b]{0.02\columnwidth}\raggedright
+Run\strut
+\end{minipage} & \begin{minipage}[b]{0.06\columnwidth}\raggedright
+Datapoints\strut
+\end{minipage} & \begin{minipage}[b]{0.15\columnwidth}\raggedright
+Host software runtime {[}ms{]}\strut
+\end{minipage} & \begin{minipage}[b]{0.29\columnwidth}\raggedright
+Average Sensor communication time per reading {[}ms{]}\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Communication jitter time {[}ms{]}\strut
+\end{minipage} & \begin{minipage}[b]{0.14\columnwidth}\raggedright
+Comment\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.02\columnwidth}\raggedright
+1\strut
+\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright
+1\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright
+9453\strut
+\end{minipage} & \begin{minipage}[t]{0.29\columnwidth}\raggedright
+1.44\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+0\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.02\columnwidth}\raggedright
+2\strut
+\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright
+1\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright
+9864\strut
+\end{minipage} & \begin{minipage}[t]{0.29\columnwidth}\raggedright
+1.5\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+0\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.02\columnwidth}\raggedright
+3\strut
+\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright
+10\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright
+12984\strut
+\end{minipage} & \begin{minipage}[t]{0.29\columnwidth}\raggedright
+1.22\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+0.9\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.02\columnwidth}\raggedright
+4\strut
+\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright
+10\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright
+12673\strut
+\end{minipage} & \begin{minipage}[t]{0.29\columnwidth}\raggedright
+1.13\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+1.1\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.02\columnwidth}\raggedright
+5\strut
+\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright
+10\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright
+43264\strut
+\end{minipage} & \begin{minipage}[t]{0.29\columnwidth}\raggedright
+2.19\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+4.2\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright
+High host system cpu load\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+The table
+shows\ref{Measured_sensor_readout_to_processing_using_host_software.csv}
+shows various jitter measurements. These were performed on a
+\passthrough{\lstinline!RaspberryPi 4 4GB!}-\gls{sbc} together with an
+\passthrough{\lstinline!1D: Single Sensor!}\ref{d-single-sensor} and the
+following software settings:
+
+\begin{itemize}
+\tightlist
+\item
+  \passthrough{\lstinline!Raspberry Pi OS Lite!} -
+  \passthrough{\lstinline!debian bookworm x64!},
+\item
+  \gls{mrp}\ref{software-readout-framework}-library - version
+  \passthrough{\lstinline!1.4.1!}
+\item
+  \passthrough{\lstinline!Unified Sensor Firmware!}\ref{unified-sensor}
+  - version \passthrough{\lstinline!1.0.1!}
+\end{itemize}
+
+It can be seen that a jitter time of up to an additional
+\passthrough{\lstinline!1ms!} is added between the triggering of the
+measurements by the host system and the receipt of the command by the
+sensor hardware. If the host system is still under load, this value
+increases many times over. This means that synchronising several sensors
+via the \gls{usb} connection alone is not sufficient.
 
 The other issue is sending the trigger signal from the readout
 software\ref{software-readout-framework}. Here too, unpredictable
