--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -76,6 +76,20 @@ url = {https://github.com/RBEGamer/VoltcraftGM70Rest},
 }
 
 
+@misc{PTPIEEE1588,
+author = {Jeff Geerling},
+title = {PTP and IEEE-1588 hardware timestamping},
+year = {01.01.2024},
+url = {https://www.jeffgeerling.com/blog/2022/ptp-and-ieee-1588-hardware-timestamping-on-raspberry-pi-cm4},
+}
+
+@misc{heapq,
+author = {Python Software Foundation},
+title = {Python Docs - heapq},
+year = {01.01.2024},
+url = {https://docs.python.org/3/library/heapq.html},
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
 %%%%%%%%%%%%%%%%%%%%%%%%
